// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div>
  <div
    className=""
  >
    <header
      className="MuiPaper-root-170 MuiPaper-elevation4-176 MuiAppBar-root-162 MuiAppBar-positionFixed-163 MuiAppBar-colorPrimary-168 mui-fixed"
    >
      <div
        className="MuiToolbar-root-197 MuiToolbar-regular-199 MuiToolbar-gutters-198 APIComponent-nowrap-156"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-207 MuiIconButton-root-201 MuiIconButton-colorInherit-202 APIComponent-menuButton-157"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-206"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-210"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-217"
          />
        </button>
        <h2
          className="MuiTypography-root-224 MuiTypography-title-230 MuiTypography-colorInherit-243 APIComponent-flex-155"
        >
          Point Pods
        </h2>
      </div>
    </header>
    <div
      className="APIComponent-spacer-159"
    />
  </div>
  <button
    aria-label="New Tournament"
    className="MuiButtonBase-root-207 MuiButton-root-273 MuiButton-fab-288 MuiButton-contained-282 MuiButton-containedSecondary-284 MuiButton-raised-285 MuiButton-raisedSecondary-287 APIComponent-actionButton-154"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-274"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-210"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-217"
    />
  </button>
  <div
    className="TournamentCards-root-297"
  >
    <div
      className="MuiPaper-root-170 MuiPaper-elevation1-173 MuiPaper-rounded-171 MuiCard-root-300 TournamentCards-card-298"
      id="not-found"
    >
      <div
        className="MuiCardHeader-root-301"
      >
        <div
          className="MuiCardHeader-content-304"
        >
          <span
            className="MuiTypography-root-224 MuiTypography-headline-229 MuiCardHeader-title-305"
          >
            No Tournaments Found
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div>
  <div
    className=""
  >
    <header
      className="MuiPaper-root-170 MuiPaper-elevation4-176 MuiAppBar-root-162 MuiAppBar-positionFixed-163 MuiAppBar-colorPrimary-168 mui-fixed"
    >
      <div
        className="MuiToolbar-root-197 MuiToolbar-regular-199 MuiToolbar-gutters-198 APIComponent-nowrap-156"
      >
        <button
          aria-label="Menu"
          className="MuiButtonBase-root-207 MuiIconButton-root-201 MuiIconButton-colorInherit-202 APIComponent-menuButton-157"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-206"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-210"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-217"
          />
        </button>
        <h2
          className="MuiTypography-root-224 MuiTypography-title-230 MuiTypography-colorInherit-243 APIComponent-flex-155"
        >
          Point Pods
        </h2>
      </div>
    </header>
    <div
      className="APIComponent-spacer-159"
    />
  </div>
  <button
    aria-label="New Tournament"
    className="MuiButtonBase-root-207 MuiButton-root-273 MuiButton-fab-288 MuiButton-contained-282 MuiButton-containedSecondary-284 MuiButton-raised-285 MuiButton-raisedSecondary-287 APIComponent-actionButton-154"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-274"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-210"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </span>
    <span
      className="MuiTouchRipple-root-217"
    />
  </button>
  <div
    className="TournamentCards-root-297"
  >
    <div
      className="MuiPaper-root-170 MuiPaper-elevation1-173 MuiPaper-rounded-171 MuiCard-root-300 TournamentCards-card-298"
      id="mock0"
    >
      <div
        className="MuiCardHeader-root-301"
      >
        <div
          className="MuiCardHeader-content-304"
        >
          <span
            className="MuiTypography-root-224 MuiTypography-headline-229 MuiCardHeader-title-305"
          >
            test0
          </span>
          <span
            className="MuiTypography-root-224 MuiTypography-body1-233 MuiTypography-colorTextSecondary-247 MuiCardHeader-subheader-306"
          >
            cat0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-307"
      >
        <p
          className="MuiTypography-root-224 MuiTypography-body1-233"
        >
          4 Total Players
        </p>
        <p
          className="MuiTypography-root-224 MuiTypography-body1-233"
        >
          3 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-308"
      >
        <a
          className="MuiButtonBase-root-207 MuiButton-root-273 MuiButton-text-275 MuiButton-flat-278 MuiButton-sizeSmall-294 TournamentCards-right-299 MuiCardActions-action-309"
          href="/tournament/mock0"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-274"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-217"
          />
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root-170 MuiPaper-elevation1-173 MuiPaper-rounded-171 MuiCard-root-300 TournamentCards-card-298"
      id="mock2"
    >
      <div
        className="MuiCardHeader-root-301"
      >
        <div
          className="MuiCardHeader-content-304"
        >
          <span
            className="MuiTypography-root-224 MuiTypography-headline-229 MuiCardHeader-title-305"
          >
            test2
          </span>
          <span
            className="MuiTypography-root-224 MuiTypography-body1-233 MuiTypography-colorTextSecondary-247 MuiCardHeader-subheader-306"
          >
            cat0
          </span>
        </div>
      </div>
      <div
        className="MuiCardContent-root-307"
      >
        <p
          className="MuiTypography-root-224 MuiTypography-body1-233"
        >
          4 Total Players
        </p>
        <p
          className="MuiTypography-root-224 MuiTypography-body1-233"
        >
          4 Active Players
        </p>
      </div>
      <div
        className="MuiCardActions-root-308"
      >
        <a
          className="MuiButtonBase-root-207 MuiButton-root-273 MuiButton-text-275 MuiButton-flat-278 MuiButton-sizeSmall-294 TournamentCards-right-299 MuiCardActions-action-309"
          href="/tournament/mock2"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-274"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-217"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
